fix dialog bugs on smaller viewport widths

--- a/static/site.css
+++ b/static/site.css
@@ -377,8 +377,7 @@ iframe {
     );
   }
   .modal {
-    width: 100%;
-    height: 100%;
+      width: min(400px, 80vw);
   }
 }
 @media (max-width: 599px) {
@@ -1718,7 +1717,6 @@ input {
 .modal-content {
   display: flex;
   flex-flow: column;
-  max-height: 100%;
   background-color: var(--modal-bg);
   margin: 0 auto;
   max-width: min(calc(60vw + 100px), 450px);
